@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1120</width>
-    <height>680</height>
+    <width>1116</width>
+    <height>686</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -183,6 +183,34 @@
           <string>Event Segmentation</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
+          <item row="0" column="0">
+           <widget class="QComboBox" name="comboBox_segmenter">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="toolTip">
+             <string>Select the segmentation method to use</string>
+            </property>
+            <item>
+             <property name="text">
+              <string>Disabled (from input file)</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Thresholding</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>ML Model</string>
+             </property>
+            </item>
+           </widget>
+          </item>
           <item row="1" column="0" alignment="Qt::AlignTop">
            <widget class="QStackedWidget" name="stackedWidget_segmenter">
             <property name="sizePolicy">
@@ -192,21 +220,25 @@
              </sizepolicy>
             </property>
             <property name="currentIndex">
-             <number>1</number>
+             <number>2</number>
             </property>
-            <widget class="QWidget" name="page">
-             <layout class="QGridLayout" name="gridLayout">
-              <item row="0" column="0">
-               <widget class="QCheckBox" name="checkBox_basin_based">
-                <property name="text">
-                 <string>Use basins (output file links to input file)</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
+            <widget class="QWidget" name="page_copy">
+             <layout class="QGridLayout" name="gridLayout"/>
             </widget>
-            <widget class="QWidget" name="page_2">
+            <widget class="QWidget" name="page_thresh">
              <layout class="QGridLayout" name="gridLayout_3">
+              <property name="leftMargin">
+               <number>2</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>2</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
               <item row="0" column="0">
                <widget class="QLabel" name="label">
                 <property name="toolTip">
@@ -233,34 +265,102 @@
                 </property>
                </widget>
               </item>
+              <item row="1" column="0">
+               <spacer name="verticalSpacer">
+                <property name="orientation">
+                 <enum>Qt::Vertical</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>20</width>
+                  <height>0</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
              </layout>
             </widget>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QComboBox" name="comboBox_segmenter">
-            <property name="enabled">
-             <bool>false</bool>
-            </property>
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="toolTip">
-             <string>Select the segmentation method to use</string>
-            </property>
-            <item>
-             <property name="text">
-              <string>Disabled (from input file)</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Threshold-based</string>
-             </property>
-            </item>
+            <widget class="QWidget" name="page_torch">
+             <layout class="QVBoxLayout" name="verticalLayout_3">
+              <property name="leftMargin">
+               <number>2</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>2</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
+              <item>
+               <layout class="QGridLayout" name="gridLayout_4">
+                <item row="0" column="1">
+                 <widget class="QComboBox" name="comboBox_torch_model">
+                  <property name="enabled">
+                   <bool>false</bool>
+                  </property>
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <item>
+                   <property name="text">
+                    <string>No models available</string>
+                   </property>
+                  </item>
+                 </widget>
+                </item>
+                <item row="0" column="2">
+                 <widget class="QToolButton" name="toolButton_torch_info">
+                  <property name="enabled">
+                   <bool>false</bool>
+                  </property>
+                  <property name="toolTip">
+                   <string>show model details</string>
+                  </property>
+                  <property name="text">
+                   <string>?</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="3">
+                 <widget class="QToolButton" name="toolButton_torch_add">
+                  <property name="toolTip">
+                   <string>add a model file</string>
+                  </property>
+                  <property name="text">
+                   <string>+</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="0">
+                 <widget class="QLabel" name="label_3">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="text">
+                   <string>File</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <widget class="QCheckBox" name="checkBox_torch_use_gpu">
+                <property name="text">
+                 <string>Use GPU</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
            </widget>
           </item>
          </layout>
@@ -428,7 +528,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1120</width>
+     <width>1116</width>
      <height>22</height>
     </rect>
    </property>
